# moriarty-cfo

./: .coveragerc  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  cabinet.example.json  cfo  company.example.json  install.sh  plugin.json  pyproject.toml  requirements.txt
.github/workflows/: evals.yml
cfo-budget-forecast/: SKILL.md
cfo-budget-forecast/references/: atterrissage.md  budget-annuel.md  business-plan-3-5-ans.md  capex-roi.md  rolling-forecast.md  scenarios.md  sensitivity-monte-carlo.md
cfo-budget-forecast/scripts/: budget_builder.py  capex_analyzer.py  (+1 more)
cfo-comptabilite/: SKILL.md
cfo-controle-gestion/: SKILL.md
cfo-csrd-esg/: SKILL.md
cfo-financement-croissance/: SKILL.md
cfo-fiscalite/: SKILL.md
cfo-init/: SKILL.md
cfo-reporting/: SKILL.md
cfo-risques-conformite/: SKILL.md
cfo-tresorerie/: SKILL.md
data/: achievements.json  calendar-fiscal-base.json  cfo-frameworks-corpus.json  cfo-job-corpus.json  kpi-catalog.json  moriarty-positioning.json  pieces-dossier.json  routines-catalog.json  secteurs-naf.json  seuils-classification.json  sources.json
docs/: POC-CLIENT-EC.md  POC-CLIENT-PME.md  PUBLISHING.md  coverage-snapshot.md  release-notes-v0.2.2.md
evals/: README.md  aggregate_benchmark.py  baseline-comparison.md  baseline-scenarios.json  config.yaml  functional-tests.json  measure_baseline.py  run_coverage.py  run_evals.py  triggering-tests.json
shared/: achievement-templates.md  brand-voice.md  notification-templates.md  output-format.md  tone-by-audience.md
(+227 files in other folders)
