[project]
name = "moriarty-cfo"
version = "0.1.6"
description = "Suite de 10 skills Claude pour CFO/DAF français, PME/TPE et cabinets d'expertise comptable."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "Moriarty"}]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
  ".git",
  "__pycache__",
  ".venv",
  "private",
  "evals/_helpers",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
  "E501",   # line too long: tolérance 120 chars déjà configurée, certaines descriptions en français doivent dépasser
  "E741",   # ambiguous variable name: some math scripts use `l`, `I` legitimately
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["evals"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
